--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,15 +14,15 @@
     />
   </head>
   <body>
-    <div class="card" style="width: 18rem">
+    <div class="card" id="cardID" style="width: 18rem">
       <img src="workout.jpg" class="card-img-top" alt="Dumbbell workout" />
       <div class="card-body">
-        <h5 class="card-title">Time to shine</h5>
+        <h5 class="card-title" id="card-titleID">Time to shine</h5>
         <p class="card-text">
           Do you have 15 minutes? That is enough for this effective at home
           workout routine! Check out our new guided video.
         </p>
-        <button class="btn btn-primary">Start workout</button>
+        <button class="btn btn-primary" id="buttoPink">Start workout</button>
       </div>
     </div>
   </body>
